feat (Unit Test) Refactor job flow services and update test cases